--- a/web/chem.html
+++ b/web/chem.html
@@ -4,34 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adapter Pattern Example</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            max-width: 600px;
-            margin: auto;
-            padding: 20px;
-            text-align: center;
-        }
-
-        #output {
-            margin-top: 20px;
-            border: 1px solid #ddd;
-            padding: 10px;
-            border-radius: 4px;
-        }
-
-        #toggleButton {
-            margin-top: 10px;
-            padding: 8px 16px;
-            font-size: 16px;
-            cursor: pointer;
-        }
-    </style>
+    <style src="style.css"> </style>
 </head>
 <body>
     <div id="output"></div>
     <button id="toggleButton">Render</button>
 
-    <script></script>
+    <script src="script.js"></script>
 </body>
 </html>
